<resources>
    <string name="app_name">Network Information</string>
    <string name="action_about">About</string>

    <string name="empty">Empty</string>

    <string name="sim_serialn">SIM SN:</string>
    <string name="sim_operator">SIM Operator:</string>
    <string name="sim_imsi">SIM IMSI:</string>
    <string name="network_operator">Network Operator:</string>
    <string name="network_type">Network Type:</string>
    <string name="msisdn">MSISDN:</string>
    <string name="cid">CID:</string>
    <string name="lac">LAC:</string>
    <string name="signal">SIGNAL:</string>

    <string name="min">Minimal</string>
    <string name="good">Good</string>
    <string name="normal">Normal</string>
    <string name="perfect">Perfect</string>

    <string name="dbValue">dB values</string>

    <string name="getLoc">Getting Location</string>
    <string name="wait">Please, wait...</string>
    <string name="exception_map">Exception requesting location: </string>
    <string name="signal_stre">Signal Strength: </string>

    <string name="developed">Deployment by Luis Martinez</string>



    <string name="clear">CLEAR</string>
    <string name="okay">OK</string>
    <string name="data_updated">Data has been updated</string>
    <string name="data_emptied">Data has been emptied</string>
    <string name="nodata">No data available</string>
    <string name="data_permission">Permissions are needed</string>

    <string name="graph">Signal Graph</string>
    <string name="cell">Cell Tower Location</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
